Version 0.3.2
=============

21.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Integration with Newrelic RPM

26.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Corrected the wrong syntax for cookie expiration (set to 365 days)
  * Bringing back the @anywhere script

18.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Fixed the issue with edit today topic
  * Error message when twitter fails to respond
  * Introduced twitter's @anywhere script
  * Some bugfixes

17.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Proper HTML codes instead of '<' and '>' chars
  * Moved the user counter to navigation menu
  * Selected tabs are now remembered (using cookies)
  * Added number of users per category and tag

14.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Temporarily disabled code for the 3rd party feedback widget
  * Fixed the wrong link on tag view screen

Version 0.3.1
=============

05.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Code for 3rd party feedback widget

04.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Relabeled some tag related strings, improved CSS, fixed some bugs
  * Basic administration module for featured topic/tag
  * Cosmetic corrections
  * Link to blog added

03.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Introducing descriptions and keywords for better SEO
  * Simple pagination for the sidebar trending topic  

18.06.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented tags list and tag show pages
  * Customized endless page pagination to be used for categories and tags
  * Fixed bug with last registered used for category
  * Fixed design issue with pagination div
  * Renamed trends to trending_tags

13.06.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Updated test environment, improved README and initial setup for it