@@ -1,17 +1,0 @@
-History.txt
-Manifest.txt
-PostInstall.txt
-README.rdoc
-Rakefile
-features/convert_latin_to_cyrillic.feature
-features/development.feature
-features/step_definitions/common_steps.rb
-features/step_definitions/convert_latin_to_cyrillic_steps.rb
-features/support/common.rb
-features/support/env.rb
-features/support/matchers.rb
-lib/cyrillizer.rb
-lib/cyrillizer/converter.rb
-spec/cyrillizer_spec.rb
-spec/spec.opts
-spec/spec_helper.rb
