@@ -1,8 +1,0 @@
-
-Usage:
-
-require 'rubygems'
-require 'cyrillizer'
-puts 'Konvertiraj go ova na kirilica'.to_cyr
-
-For more information on cyrillizer, see http://github.com/dalibor/cyrillizer
