@@ -1,62 +1,0 @@
-= cyrillizer
-
-* http://github.com/dalibor/cyrillizer
-
-== DESCRIPTION:
-
-Character conversion from latin alphabet to Macedonian cyrillic alphabet
-
-== SYNOPSIS:
-
-- Ruby version <= 1.8.7
-
-    $KCODE = 'UTF8'
-    require 'rubygems'
-    require 'cyrillizer'
-    puts 'Konvertiraj go ova na kirilica'.to_cyr
-
-- Ruby version >= 1.9.1
-
-    require 'cyrillizer'
-    puts 'Konvertiraj go ova na kirilica'.to_cyr
-
-== INSTALL:
-
-    sudo gem install gemcutter
-    sudo gem tumble
-    sudo gem install cyrillizer
-
-To run the scenarios/specs, you have to first install cucumber and rspec gems
-
-    sudo gem install cucumber
-    sudo gem install rspec
-
-And then, use their command line utillities:
-
-    spec spec --options spec/spec.opts
-    cucumber features
-
-== LICENSE:
-
-(The MIT License)
-
-Copyright (c) 2009 Dalibor Nasevic
-
-Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files (the
-'Software'), to deal in the Software without restriction, including
-without limitation the rights to use, copy, modify, merge, publish,
-distribute, sublicense, and/or sell copies of the Software, and to
-permit persons to whom the Software is furnished to do so, subject to
-the following conditions:
-
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
-TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
