@@ -1,8 +1,0 @@
-$:.unshift(File.dirname(__FILE__)) unless
-  $:.include?(File.dirname(__FILE__)) || $:.include?(File.expand_path(File.dirname(__FILE__)))
-
-require 'cyrillizer/converter'
-
-module Cyrillizer
-  VERSION = '0.0.2'
-end
