@@ -1,10 +1,0 @@
-=== 0.0.2 2009-11-08
-
-* 1 major enhancement:
-  * Fixed convertions for upper case latters
-
-=== 0.0.1 2009-10-12
-
-* 1 major enhancement:
-  * Initial release
-
